2007-03-12  J. Tang  <jtang@tresys.com>

	* sediffx now diffs and displays range transitions

	* sediff -E now diffs range transitions

	* range transition diff added libpoldiff

2007-03-08  J. Tang  <jtang@tresys.com>

	* poldiff_user_get_added_roles() and
	poldiff_user_get_removed_roles() now return all roles when the
	form is POLDIFF_FORM_ADDED / POLDIFF_FORM_REMOVED.

	* sediffx updated to show users' MLS differences

2007-03-07  J. Tang  <jtang@tresys.com>

	* in libpoldiff, if either policy is MLS then when diffing users,
	those users' default MLS level and assigned ranges are also
	diffed.

	* added poldiff_range_t object

	* fixed segfault in libqpol when loading an invalid source policy

	* error messages were not being shown correctly in apol's open
	policy dialog; fixed.

2007-03-06  J. Mowery <jmowery@tresys.com>

	* added SWIG wrapper for libqpol. The wrapper treats all libqpol
	structs as classes in the target language.

2007-03-06  J. Tang  <jtang@tresys.com>

	* apol_mls_level_create() will now always return an allocated (and
	empty) category vector as part of the level.  Before it would
	initialize the field as NULL.

	* poldiff_avrule_get_unmodified_perms() no longer returns all
	permissions whenever a rule is added or removed; it only returns
	permissions when the form is POLDIFF_FORM_MODIFIED.  The new
	behavior matches the other policy components.

2007-03-05  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_free() and apol_mls_range_get_levels()

2007-03-02  J. Tang  <jtang@tresys.com>

	* qpol_user_get_range() and qpol_user_get_dfltlevel() now return
	NULL if the policy is not MLS.  (It used to return a garbage
	pointer.)

2007-03-01  J. Tang  <jtang@tresys.com>

	* added additional accessors to the seaudit_avc_message_t object.

2007-02-28  J. Tang  <jtang@tresys.com>

	* added apol_mls_level_create_from_mls_level() and
	apol_mls_range_create_from_mls_range() copy constructors.
